# scouting

./: .npmrc  app.json  credentials.json  package.json  pnpm-lock.yaml  zellij.kdl
.github/workflows/: build-app.yml
apps/StickerSmash/: app.json  index.ts  package.json
apps/StickerSmash/ios/: Podfile
apps/WarriorHappy/: App.js  app.config.ts  app.json  eas.json  index.ts  metro.config.cjs  metro.config.js  nativewind-env.d.ts  package.json  postcss.config.js  tailwind.config.js  tamagui-web.css  tamagui.config.ts  tsconfig.json
apps/WarriorHappy/.tamagui/: tamagui-components.config.cjs  tamagui.config.cjs  tamagui.config.json
apps/angry/: input.csv  pyproject.toml
apps/angry/angry/: __main__.py
apps/expo/: .gitignore  app.config.ts  app.json  index.js  metro.config.js  package.json  tailwind.config.ts
apps/expo/ios/: .xcode.env.local  Podfile
apps/expo1/: app.json  package.json
apps/expo1/aapp/: _layout.ts
apps/expo1/app/: _layout.tsx
apps/nextjs/: next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
credentials/ios/: dist-cert.p12  profile.mobileprovision
docs/: future.md  structure.md  tooling.md
tooling/eslint/: base.js  package.json
tooling/prettier/: package.json
tooling/supabase/: config.toml  index.ts  package.json
tooling/supabase/migrations/: 20240224010134_initial_schema.sql  20240224010439_triggers.sql  20240224015927_event_log.sql  (+2 more)
tooling/tailwind/: index.ts  package.json
tooling/tamagui/: index 2.ts  index.ts  package.json
(+94 files in other folders)
